--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,10 @@ body {
   background-color: white !important;
   color: black !important;
 }
+
+.MuiTabs-indicator {
+  background-color: #ff5252 !important;
+}
+.MuiTab-textColorPrimary.Mui-selected {
+  color: #ff5252 !important;
+}
